[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/editor/LevelPanel.gd" type="Script" id=1]

[node name="LevelPanel" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -191.0
margin_bottom = 110.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 184.0
margin_bottom = 103.0

[node name="Create" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 177.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Create"]
margin_right = 177.0
margin_bottom = 24.0

[node name="Width" type="LineEdit" parent="VBoxContainer/Create/HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Width"

[node name="Height" type="LineEdit" parent="VBoxContainer/Create/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Height"

[node name="CreateButton" type="Button" parent="VBoxContainer/Create/HBoxContainer"]
margin_left = 124.0
margin_right = 177.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Create"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 177.0
margin_bottom = 43.0
custom_constants/separation = 15

[node name="SaveAndLoad2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 177.0
margin_bottom = 96.0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/SaveAndLoad2"]
margin_right = 177.0
margin_bottom = 20.0

[node name="Load" type="Button" parent="VBoxContainer/SaveAndLoad2/Buttons"]
margin_right = 86.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Load"

[node name="Save" type="Button" parent="VBoxContainer/SaveAndLoad2/Buttons"]
margin_left = 90.0
margin_right = 177.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Save"

[node name="Selection" type="HBoxContainer" parent="VBoxContainer/SaveAndLoad2"]
margin_top = 24.0
margin_right = 177.0
margin_bottom = 49.0

[node name="WorldOptions" type="OptionButton" parent="VBoxContainer/SaveAndLoad2/Selection"]
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddWorldButton" type="Button" parent="VBoxContainer/SaveAndLoad2/Selection"]
margin_left = 58.0
margin_right = 86.0
margin_bottom = 25.0
text = " + "

[node name="LevelOptions" type="OptionButton" parent="VBoxContainer/SaveAndLoad2/Selection"]
margin_left = 90.0
margin_right = 145.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3

[node name="AddLevelButton" type="Button" parent="VBoxContainer/SaveAndLoad2/Selection"]
margin_left = 149.0
margin_right = 177.0
margin_bottom = 25.0
text = " + "
[connection signal="pressed" from="VBoxContainer/Create/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndLoad2/Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndLoad2/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="item_selected" from="VBoxContainer/SaveAndLoad2/Selection/WorldOptions" to="." method="_on_WorldOptions_item_selected"]
[connection signal="pressed" from="VBoxContainer/SaveAndLoad2/Selection/AddWorldButton" to="." method="_on_AddWorldButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndLoad2/Selection/AddLevelButton" to="." method="_on_AddLevelButton_pressed"]
